<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile3"
        android:title="@string/profile"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_plus"
        android:enabled="true"
        android:icon="@drawable/ic_plus"
        android:title="@string/newEvent"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map1"
        android:title="@string/nearby"

        app:showAsAction="always"/>
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_calendar1"
        android:title="@string/interesting"

        app:showAsAction="always"/>
    <item
        android:id="@+id/action_hot"
        android:enabled="true"
        android:icon="@drawable/ic_burn"
        android:title="@string/hot"

        app:showAsAction="always"/>

</menu>
