<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/textColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/ruslan" />
        <TextView
            android:id="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_image"
            android:text="Ruslan Gazanfarov"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:text="I create the most exciting and fun events."/>
        <TextView
            android:id="@+id/profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_me"
            android:layout_centerHorizontal="true"
            android:text="San Francisco, CA"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/textColor"
            android:textSize="18sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/profile_friends_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="75"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                />
            <TextView
                android:layout_below="@id/profile_friends_number"
                android:id="@+id/profile_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_centerHorizontal="true"
                android:text="@string/friends"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                />
        </RelativeLayout>
        <View
            android:id="@+id/profile_divider"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/textColor"/>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/profile_events_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="120"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                />
            <TextView
                android:layout_below="@id/profile_events_number"
                android:id="@+id/profile_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_centerHorizontal="true"
                android:text="@string/events"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <TextView
            android:id="@+id/profile_latest"
            android:text="@string/latest"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/profile_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>